# codespy

./: .clang-tidy  CMakeLists.txt
include/bytecode/: ClassFile.hh  Definitions.hh  Visitor.hh
include/codespy/bytecode/: ClassFile.hh  Definitions.hh  Dumper.hh  Frontend.hh  Visitor.hh
include/codespy/container/: Array.hh  FixedBuffer.hh  List.hh  ListNode.hh  Vector.hh
include/codespy/decompiler/: Ast.hh  Decompiler.hh
include/codespy/gui/: BytecodeHighlighter.hh  IrHighlighter.hh  MainWindow.hh  TextEdit.hh  TreeModel.hh
include/codespy/ir/: BasicBlock.hh  Cfg.hh  Constant.hh  Context.hh  Dominance.hh  Dumper.hh  Function.hh  Instruction.hh  Instructions.hh  Instructions.in  Java.hh  Type.hh  Unit.hh  (+2 more)
include/container/: Array.hh  FixedBuffer.hh  HashMap.hh  HashSet.hh  MapEntry.hh  Vector.hh
include/support/: Enum.hh  Format.hh  Hash.hh  Integral.hh  Optional.hh  Print.hh  Result.hh  ScopedLock.hh  Span.hh  SpanStream.hh  Stream.hh  StreamError.hh  String.hh  StringBuilder.hh  StringView.hh  Test.hh  Tuple.hh  Union.hh  UniquePtr.hh  Utility.hh  Variant.hh
sources/: CMakeLists.txt  main.cc
sources/bytecode/: ClassFile.cc  Dumper.cc  Frontend.cc
sources/decompiler/: Decompiler.cc
sources/gui/: BytecodeHighlighter.cc  IrHighlighter.cc  MainWindow.cc  TextEdit.cc  TreeModel.cc
sources/ir/: BasicBlock.cc  Context.cc  Dominance.cc  Dumper.cc  Function.cc  Instruction.cc  Instructions.cc  Java.cc  Value.cc
sources/support/: Print.cc  Stream.cc  String.cc  StringBuilder.cc
sources/transform/: CfgSimplifier.cc  ExceptionPruner.cc  LocalPromoter.cc
(+21 files in other folders)
